text overlapping fixed

--- a/src/Components/MobileView.css
+++ b/src/Components/MobileView.css
@@ -353,7 +353,7 @@
     text-align: center;
     margin-left: 0%;
     white-space: normal;
-
+    line-height:10px ;
   }
 
   .editable-textbox{
